# grep.rs

./: .gitignore  Cargo.toml  LICENSE  README.md  file1.txt  file2.txt  try  try.rs
.github/workflows/: release.yml
benches/: benchmark.rs
src/: algorithms.rs  argument.rs  dlf.rs  file1.txt  kmp.rs  lib.rs  main.rs  matcher.rs  trie.rs
tests/: regex_test.rs
tests/misc/: file3.txt  lorem.txt  test.txt
